add data in local stroge

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <section class="d-flex justify-content-center">
       <button type="button" class="btn btn-primary position-relative" onclick="loadCard()">
         cart
-        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-          99+
+        <span id="cart_Item_num" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+          0
           <span class="visually-hidden">unread messages</span>
         </span>
       </button>
