--- a/cart.html
+++ b/cart.html
@@ -1,12 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>cart</title>
-</head>
-<body>
-    <h1>cart</h1>
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/Spinner.css" />
+    <link rel="stylesheet" href="css/Cart_Box.css" />
+  </head>
+  <body>
+    <header>
+      <h1 class="text-primary text-center mt-4">Mobile Dokan</h1>
+    </header>
+    <!-- Spinner.css -->
+    <section id="Spinner">
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </section>
+
+    <!-- Cart_Box.css.css -->
+    <section id="Cart_Box">
+      <div class="cartItem">
+        <div class="image_height">
+          <img
+            src="https://fdn2.gsmarena.com/vv/bigpic/oppo-find-x5.jpg"
+            class="my-img-fluid"
+            alt="picture"
+          />
+        </div>
+        <div class="card-body">
+          <h3 class="card-title text-center">Find X5</h3>
+          <p class="card-text text-center">Oppo</p>
+        </div>
+        <div>Quintity: 2</div>
+      </div>
+      <div class="cartItem">
+        <div class="image_height">
+          <img
+            src="https://fdn2.gsmarena.com/vv/bigpic/oppo-find-x5.jpg"
+            class="my-img-fluid"
+            alt="picture"
+          />
+        </div>
+        <div class="card-body">
+          <h3 class="card-title text-center">Find X5</h3>
+          <p class="card-text text-center">Oppo</p>
+        </div>
+        <div>Quintity: 2</div>
+      </div>
+      <div class="cartItem">
+        <div class="image_height">
+          <img
+            src="https://fdn2.gsmarena.com/vv/bigpic/oppo-find-x5.jpg"
+            class="my-img-fluid"
+            alt="picture"
+          />
+        </div>
+        <div class="card-body">
+          <h3 class="card-title text-center">Find X5</h3>
+          <p class="card-text text-center">Oppo</p>
+        </div>
+        <div>Quintity: 2</div>
+      </div>
+
+    </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
