--- a/cart.html
+++ b/cart.html
@@ -41,6 +41,7 @@
         </div>
         <div>Quintity: 2</div>
       </div>
+
       <div class="cartItem">
         <div class="image_height">
           <img
@@ -55,6 +56,7 @@
         </div>
         <div>Quintity: 2</div>
       </div>
+
       <div class="cartItem">
         <div class="image_height">
           <img
@@ -76,5 +78,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="js/loadCart.js"></script>
   </body>
 </html>
