--- a/cart.html
+++ b/cart.html
@@ -17,6 +17,7 @@
   <body>
     <header>
       <h1 class="text-primary text-center mt-4">Mobile Dokan</h1>
+      
     </header>
     <!-- Spinner.css -->
     <section id="Spinner">
@@ -27,50 +28,7 @@
 
     <!-- Cart_Box.css.css -->
     <section id="Cart_Box">
-      <div class="cartItem">
-        <div class="image_height">
-          <img
-            src="https://fdn2.gsmarena.com/vv/bigpic/oppo-find-x5.jpg"
-            class="my-img-fluid"
-            alt="picture"
-          />
-        </div>
-        <div class="card-body">
-          <h3 class="card-title text-center">Find X5</h3>
-          <p class="card-text text-center">Oppo</p>
-        </div>
-        <div>Quintity: 2</div>
-      </div>
-
-      <div class="cartItem">
-        <div class="image_height">
-          <img
-            src="https://fdn2.gsmarena.com/vv/bigpic/oppo-find-x5.jpg"
-            class="my-img-fluid"
-            alt="picture"
-          />
-        </div>
-        <div class="card-body">
-          <h3 class="card-title text-center">Find X5</h3>
-          <p class="card-text text-center">Oppo</p>
-        </div>
-        <div>Quintity: 2</div>
-      </div>
-
-      <div class="cartItem">
-        <div class="image_height">
-          <img
-            src="https://fdn2.gsmarena.com/vv/bigpic/oppo-find-x5.jpg"
-            class="my-img-fluid"
-            alt="picture"
-          />
-        </div>
-        <div class="card-body">
-          <h3 class="card-title text-center">Find X5</h3>
-          <p class="card-text text-center">Oppo</p>
-        </div>
-        <div>Quintity: 2</div>
-      </div>
+      <h3 class="text-primary text-center mt-4">Product Cart</h3>
 
     </section>
     <script
