--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
         <span class="visually-hidden">Loading...</span>
       </div>
     </section>
-    <h3 class="text-primary text-center mt-4">Product Cart</h3>
+    <h3 class="text-dark text-center mt-4">Product Cart</h3>
     <!-- Cart_Box.css.css -->
     <section id="Cart_Box">
       
