--- a/index.html
+++ b/index.html
@@ -21,66 +21,77 @@
       <h1 class="text-primary text-center mt-4">Mobile Dokan</h1>
     </header>
 
-    <section class="d-flex justify-content-center">
-      <button type="button" class="btn btn-primary position-relative" onclick="loadCard()">
-        cart
-        <span id="cart_Item_num" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-          0
-          <span class="visually-hidden">unread messages</span>
-        </span>
-      </button>
-    </section>
-    <!-- searchBox.css -->
-    <section id="searchBox">
-      <div class="input-group mb-3">
-        <input
-          id="InputField"
-          type="text"
-          class="form-control"
-          placeholder="Search"
-          aria-label="Search"
-          aria-describedby="button-addon2"
-        />
+    <main>
+      <section class="d-flex justify-content-center">
         <button
-          class="btn btn-outline-primary"
           type="button"
-          id="button-addon2"
-          onclick="LoadItem()"
+          class="btn btn-primary position-relative"
+          onclick="loadCard()"
         >
-          Search
+          cart
+          <span
+            id="cart_Item_num"
+            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+          >
+            0
+            <span class="visually-hidden">unread messages</span>
+          </span>
+        </button>
+      </section>
+      <!-- searchBox.css -->
+      <section id="searchBox">
+        <div class="input-group mb-3">
+          <input
+            id="InputField"
+            type="text"
+            class="form-control"
+            placeholder="Search"
+            aria-label="Search"
+            aria-describedby="button-addon2"
+          />
+          <button
+            class="btn btn-outline-primary"
+            type="button"
+            id="button-addon2"
+            onclick="LoadItem()"
+          >
+            Search
+          </button>
+        </div>
+      </section>
+
+      <!-- Spinner.css -->
+      <section id="Spinner">
+        <div class="spinner-border text-primary" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </section>
+
+      <!-- Item_Details.css -->
+      <section id="Item_Details"></section>
+
+      <!-- Items.css -->
+      <section id="Items"></section>
+
+      <!-- Show All btn -->
+      <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
+        <button
+          id="ShowAll"
+          class="btn btn-primary"
+          type="button"
+          onclick="Show_All()"
+        >
+          Show All
         </button>
       </div>
-    </section>
-
-    <!-- Spinner.css -->
-    <section id="Spinner">
-      <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </section>
-
-    <!-- Item_Details.css -->
-    <section id="Item_Details"></section>
-
-    <!-- Items.css -->
-    <section id="Items"></section>
-
-    <!-- Show All btn -->
-    <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
-      <button
-        id="ShowAll"
-        class="btn btn-primary"
-        type="button"
-        onclick="Show_All()"
-      >
-        Show All
-      </button>
-    </div>
+    </main>
 
     <!-- footer -->
-    <div style="text-align: center; padding-top: 20px">
-      <small>© Avijit Kundu</small>
-    </div>
+    <footer>
+      <div style="text-align: center; padding-top: 20px">
+        <small>© Avijit Kundu</small>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
