click Enter Btn

--- a/index.html
+++ b/index.html
@@ -101,5 +101,6 @@
 
     <script src="js/app.js"></script>
     <script src="js/add_To_cart.js"></script>
+    <script src="js/ClickEnterBtn.js"></script>
   </body>
 </html>
