--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="css/Items.css" />
     <link rel="stylesheet" href="css/searchBox.css" />
     <link rel="stylesheet" href="css/Spinner.css" />
@@ -40,7 +44,7 @@
       </section>
       <!-- searchBox.css -->
       <section id="searchBox">
-        <div class="input-group mb-3">
+        <div class="input-group mb-3 animate__animated animate__backInUp">
           <input
             id="InputField"
             type="text"
@@ -68,10 +72,10 @@
       </section>
 
       <!-- Item_Details.css -->
-      <section id="Item_Details"></section>
+      <section id="Item_Details" class="animate__animated animate__backInUp"></section>
 
       <!-- Items.css -->
-      <section id="Items"></section>
+      <section id="Items" class="animate__animated animate__backInUp"></section>
 
       <!-- Show All btn -->
       <div class="d-grid gap-2 col-6 mx-auto mt-4 mb-4">
@@ -87,7 +91,7 @@
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer class="animate__animated animate__backInUp">
       <div style="text-align: center; padding-top: 20px">
         <small>© Avijit Kundu</small>
       </div>
