--- a/index.html
+++ b/index.html
@@ -22,8 +22,64 @@
   </head>
   <body>
     <header>
-      <h1 class="text-primary text-center mt-4">Mobile Dokan</h1>
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-nav-color bg-primary">
+        <div class="container">
+          <a class="navbar-brand" href="#"> Mobile Dokan </a>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a
+                  class="nav-link fw-bolder"
+                  aria-current="page"
+                  href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Brand
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Apple</a></li>
+                  <li><a class="dropdown-item" href="#">Samsung</a></li>
+                  <li><a class="dropdown-item" href="#">Huawei</a></li>
+                  <li><a class="dropdown-item" href="#">Oppo</a></li>
+                  
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bolder" href="#package">Package</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bolder" href="#quis">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bolder" href="#map">Location</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
+    <br />
+    <br />
+    <br />
+    <br />
+    <!-- <header>
+      <h1 class="text-primary text-center mt-4">Mobile Dokan</h1>
+    </header> -->
 
     <main>
       <section class="d-flex justify-content-center">
@@ -72,7 +128,10 @@
       </section>
 
       <!-- Item_Details.css -->
-      <section id="Item_Details" class="animate__animated animate__backInUp"></section>
+      <section
+        id="Item_Details"
+        class="animate__animated animate__backInUp"
+      ></section>
 
       <!-- Items.css -->
       <section id="Items" class="animate__animated animate__backInUp"></section>
