--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bolder" href="#package">Package</a>
+                <a class="nav-link fw-bolder" href="#package">Find Your Phone</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link fw-bolder" href="#quis">About Us</a>
