--- a/index.html
+++ b/index.html
@@ -61,10 +61,26 @@
                   Brand
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Apple</a></li>
-                  <li><a class="dropdown-item" href="#">Samsung</a></li>
-                  <li><a class="dropdown-item" href="#">Huawei</a></li>
-                  <li><a class="dropdown-item" href="#">Oppo</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="clickBrand('Apple')"
+                      >Apple</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="clickBrand('Samsung')"
+                      >Samsung</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="clickBrand('Huawei')"
+                      >Huawei</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#" onclick="clickBrand('Oppo')"
+                      >Oppo</a
+                    >
+                  </li>
                 </ul>
               </li>
               <li class="nav-item d-flex align-items-center">
@@ -99,27 +115,8 @@
     <br />
     <br />
     <br />
-    <!-- <header>
-      <h1 class="text-primary text-center mt-4">Mobile Dokan</h1>
-    </header> -->
 
     <main>
-      <!-- <section class="d-flex justify-content-center">
-        <button
-          type="button"
-          class="btn btn-primary position-relative"
-          onclick="loadCard()"
-        >
-          cart
-          <span
-            id="cart_Item_num"
-            class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-          >
-            0
-            <span class="visually-hidden">unread messages</span>
-          </span>
-        </button>
-      </section> -->
       <!-- searchBox.css -->
       <section id="searchBox">
         <div class="input-group mb-3 animate__animated animate__backInUp">
