fix nav and Footer dropdown clash

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <link rel="stylesheet" href="css/Item_Details.css" />
     <link rel="stylesheet" href="css/Dark footer.css" />
     <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/98ab0897f2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/98ab0897f2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -65,22 +68,34 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li>
-                    <a class="dropdown-item" href="#" onclick="clickBrand('Apple')"
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      onclick="clickBrand('Apple')"
                       >Apple</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="clickBrand('Samsung')"
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      onclick="clickBrand('Samsung')"
                       >Samsung</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="clickBrand('Huawei')"
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      onclick="clickBrand('Huawei')"
                       >Huawei</a
                     >
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#" onclick="clickBrand('Oppo')"
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      onclick="clickBrand('Oppo')"
                       >Oppo</a
                     >
                   </li>
@@ -174,23 +189,24 @@
     <!-- footer -->
     <footer id="DarkFooter">
       <div class="flex-container bg-dark">
-        <div class="flex-item-left" style="flex: 23%;">
+        <div class="flex-item-left" style="flex: 23%">
           <ul>
-              <li class="dropdown">
-                <a href="" class="dropbtn">About 
-                  <i class="fas fa-caret-down"></i>
-               </a>
-                <div class="dropdown-content">
-                  <a href="#AboutUs">About Us</a>
-                  <a href="#PrivacyPolicy">Privacy Policy</a>
-                  <a href="#WhywithUs">Why with Us</a>
-                  <a href="#">Terms & Conditions</a>
-                  <a href="#">Help</a>
-                </div>
-              </li>
-            </ul>
-      </div>
-        <div class="flex-item-right" style="flex: 23%;">
+            <li class="dropdown">
+              <a href="" class="dropbtn"
+                >About
+                <i class="fas fa-caret-down"></i>
+              </a>
+              <div class="dropdown-content">
+                <a href="#AboutUs">About Us</a>
+                <a href="#PrivacyPolicy">Privacy Policy</a>
+                <a href="#WhywithUs">Why with Us</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Help</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="flex-item-left" style="flex: 23%;">
           <ul>
               <li class="dropdown">
                 <a href="" class="dropbtn">CONTACT 
@@ -204,40 +220,44 @@
               </li>
           </ul>
       </div>
-        <div class="flex-item-left" style="flex: 23%;">
+        <div class="flex-item-left" style="flex: 23%">
           <ul>
-              <li class="dropdown">
-                <a href="" class="dropbtn">Address 
-                  <i class="fas fa-caret-down"></i>
+            <li class="dropdown">
+              <a href="" class="dropbtn"
+                >Address
+                <i class="fas fa-caret-down"></i>
               </a>
-                <div class="dropdown-content">
+              <div class="dropdown-content">
+                <p style="font-size: medium">
+                  Uttor Alipur, Natore Sador<br />
+                  bdavijit@gmail.com<br />
+                  01674399500 <br />
                   
-                  <p style="font-size: medium;"> Level-4, 34, Awal Centre, Banani, Dhaka<br>
-                      Official: web@programming-hero.com<br>
-                      Helpline : 01322810867 , 01322810869 <br>
-                      (Available : Sat - Thu, 10:00 AM to 7:00 PM)</p>
-                </div>
-              </li>
+                </p>
+              </div>
+            </li>
           </ul>
         </div>
-        <div class="flex-item-right" style="flex: 31%;">
+        <div class="flex-item-left" style="flex: 31%">
+         
           <ul>
-              <li class="dropdown">
-                <a href="" class="dropbtn">Payment Methods 
-                  <i class="fas fa-caret-down"></i>
+            <li class="dropdown">
+              <a href="" class="dropbtn"
+                >Payment Methods
+                <i class="fas fa-caret-down"></i>
               </a>
-                <div class="dropdown-content">
-                  <a style="font-size: 60px;" href="#">
-                      <i class="fab fa-cc-visa"></i>
-                      <i class="fab fa-cc-paypal"></i>
-                      <i class="fab fa-cc-mastercard"></i>
-                  </a>
-                </div>
-              </li>
+              <div class="dropdown-content">
+                <a style="font-size: 60px" href="#">
+                  <i class="fab fa-cc-visa"></i>
+                  <i class="fab fa-cc-paypal"></i>
+                  <i class="fab fa-cc-mastercard"></i>
+                </a>
+              </div>
+            </li>
           </ul>
+        </div>
       </div>
-      </div>
-      <div style="text-align: center;" class="bg-dark text-white">
+      <div style="text-align: center" class="bg-dark text-white">
         <small>© Avijit Kundu</small>
       </div>
     </footer>
