--- a/cart.html
+++ b/cart.html
@@ -19,25 +19,23 @@
       <h1 class="text-primary text-center mt-4">Mobile Dokan</h1>
       <h2 class="text-dark text-center mt-4">Product Cart</h2>
     </header>
-  <main>
+    <main>
       <!-- Spinner.css -->
       <section id="Spinner">
         <div class="spinner-border text-primary" role="status">
           <span class="visually-hidden">Loading...</span>
         </div>
       </section>
-      
+
       <!-- Cart_Box.css.css -->
-      <section id="Cart_Box">
-        
-  
-      </section>
-  </main>
+      <section id="Cart_Box"></section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
     <script src="js/loadCart.js"></script>
+    <!-- <script src="js/DeleteCartData.js"></script> -->
   </body>
 </html>
