find phone design

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                 </ul>
               </li>
               <li class="nav-item d-flex align-items-center">
-                <a class="nav-link fw-bolder" href="#package"
+                <a
+                  class="nav-link fw-bolder"
+                  href="#package"
+                  onclick="FindPhone()"
                   >Find Your Phone</a
                 >
               </li>
@@ -169,6 +172,134 @@
         id="Item_Details"
         class="animate__animated animate__backInUp"
       ></section>
+  
+  
+      <!-- Item_Details.css -->
+      <section id="Item_Find" class="animate__animated animate__backInUp">
+        <section>
+          <h1 class="text-center">Brand</h1>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox1"
+              value="option1"
+            />
+            <label class="form-check-label" for="inlineCheckbox1">Apple</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox2"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox2"
+              >Sumsung</label
+            >
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox3"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox2">Oppo</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox4"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox2">Huawei</label>
+          </div>
+        </section>
+        <br />
+        <section>
+          <h1 class="text-center">Storage</h1>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox5"
+              value="option1"
+            />
+            <label class="form-check-label" for="inlineCheckbox1">64GB</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox6"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox2">128GB</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox7"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox2">256GB</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="inlineCheckbox8"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineCheckbox2">512GB</label>
+          </div>
+        </section>
+        <br />
+        <section>
+          <h1 class="text-center">Display Size</h1>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio1"
+              value="option1"
+            />
+            <label class="form-check-label" for="inlineRadio1">
+              less then 5 inches</label
+            >
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio2"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineRadio2"
+              >5-6 inches</label
+            >
+          </div>
+          <div class="form-check form-check-inline">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="inlineRadioOptions"
+              id="inlineRadio3"
+              value="option2"
+            />
+            <label class="form-check-label" for="inlineRadio2">6+</label>
+          </div>
+        </section>
+        <br />
+        <div class="d-grid gap-2 col-6 mx-auto">
+          <button class="btn btn-primary" type="button">Find</button>
+        </div>
+      </section>
 
       <!-- Items.css -->
       <section id="Items" class="animate__animated animate__backInUp"></section>
