--- a/cart.html
+++ b/cart.html
@@ -27,15 +27,17 @@
         </div>
       </section>
 
-      <!-- Cart_Box.css.css -->
-      <section id="Cart_Box"></section>
+      <!-- Cart_Box.css.css
+      <section class="cartItem">
+        <div id="Cart_Box"></div>
+      </section> -->
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="js/loadCart.js"></script>
+    <!-- <script src="js/loadCart.js"></script> -->
     <!-- <script src="js/DeleteCartData.js"></script> -->
   </body>
 </html>
